syntax = "proto3";

option go_package = "github.com/porseOnline/api/pb";


message CompanySignUpFirstRequest {
    string firstName = 1 [json_name = "firstName"];
    string lastName = 2 [json_name = "lastName"];
    string phone = 3 [json_name = "phone"];
    string email = 4 [json_name = "email"];
    string password = 5 [json_name = "password"];
    string nationalCode = 6 [json_name = "nationalCode"];
    google.protobuf.Timestamp birthdate = 7 [json_name = "birthDate"];
    string city = 8 [json_name = "city"];
    bool gender = 9 [json_name = "gender"];

}
message CompanySignInRequest {
    string email = 1 [json_name = "email"];
    string password = 2 [json_name = "password"];
}
message CompanySignUpSecondRequest {
    uint64 companyId = 2 [json_name = "companyId"];
    string code = 1 [json_name = "code"];
}

message CompanySignUpSecondResponse {
    string accessToken = 1 [json_name = "accessToken"];
    string refreshToken = 2 [json_name = "refreshToken"];
}

message CompanySignUpFirstResponse {
    uint64 companyId = 1 [json_name = "companyId"];
}

import "google/protobuf/timestamp.proto";
message Company {
    uint64 id = 1;
    string firstName = 2;
    string lastName = 3;
    string phone = 4;
    string email = 5;             
    string passwordHash = 6;     
    string nationalCode = 7;      
    google.protobuf.Timestamp birthDate = 8;        
    string city = 9;           
    bool gender = 10;           
    int32 survey_limit_number = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp deleted_at = 13;
    google.protobuf.Timestamp updated_at = 14;
    int32 balance = 15;
}
